--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,3 +11,5 @@
 </body>
 
 </html>
+
+<!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque veritatis odit velit odio a, totam itaque quae nostrum nihil ullam commodi provident nulla adipisci! Dolores doloribus ipsam minima odio vitae! -->
